--- a/package.json
+++ b/package.json
@@ -1,54 +1,32 @@
 {
   "name": "vue-quill-editor",
-  "version": "1.0.0-alfa",
+  "version": "1.0.0",
   "description": "Quill rich text editor component encapsulated with Vue3",
-  "main": "src/index.js",
-  "scripts": {
-    "lint": "eslint --fix src --ext .js",
-    "dev:docs": "cd example && npm run dev",
-    "build:docs": "cd example && npm run build && cp ../dist/index.js ../docs",
-    "build": "npm run lint && rollup --config ./scripts/rollup.production.js",
-    "dev": "rollup --config ./scripts/rollup.development.js --watch",
-    "test": "rm -rf ./coverage && jest"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/uct8086/vue-quill-editor.git"
-  },
-  "keywords": [
-    "quill",
-    "vue3"
-  ],
   "author": "uct8086",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/uct8086/vue-quill-editor/issues"
+  "main": "dist/vue-quill-editor.umd.js",
+  "module": "dist/vue-quill-editor.esm.js",
+  "scripts": {
+    "build": "npm run clean && npm run build:esm && npm run build:umd",
+    "dev": "npm run clean && npm run dev:umd",
+    "build:esm": "rollup  --config build/rollup.esm.config.js",
+    "build:umd": "rollup --config build/rollup.umd.config.js",
+    "clean": "rimraf ./dist"
   },
-  "homepage": "https://github.com/uct8086/vue-quill-editor#readme",
   "devDependencies": {
-    "@babel/core": "^7.17.8",
-    "@babel/helpers": "^7.16.3",
-    "@babel/highlight": "^7.16.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.12.1",
-    "@babel/plugin-transform-runtime": "^7.10.5",
-    "@babel/preset-env": "^7.10.4",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "eslint": "^7.12.1",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.2.0",
-    "eslint-plugin-vue": "^8.2.0",
-    "gensync": "^1.0.0-beta.2",
-    "quill": "^1.3.7",
-    "rollup": "^2.61.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-vue": "^6.0.0",
-    "vue": "^3.2.24"
+    "@rollup/plugin-node-resolve": "^11.1.1",
+    "@vue/compiler-sfc": "^3.0.0",
+    "less": "^4.1.2",
+    "postcss-import": "^14.0.0",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.38.5",
+    "rollup-plugin-vue": "6.0.0-beta.6"
   },
   "dependencies": {
-    "@babel/runtime": "^7.17.8",
-    "@babel/runtime-corejs3": "^7.17.8"
+    "@rollup/plugin-commonjs": "^21.0.3",
+    "postcss": "^8.2.8",
+    "quill": "^1.3.7",
+    "rollup-plugin-postcss": "^4.0.0",
+    "vue": "^3.2.24"
   }
 }
