--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-quill-text-editor",
-  "version": "1.0.4",
+  "version": "1.0.5-beta",
   "description": "Quill rich text editor component encapsulated with Vue3",
   "author": "uct8086",
   "license": "ISC",
@@ -26,19 +26,17 @@
   },
   "homepage": "https://github.com/uct8086/vue-quill-text-editor#readme",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^21.0.3",
     "@rollup/plugin-node-resolve": "^11.1.1",
     "@vue/compiler-sfc": "^3.0.0",
     "less": "^4.1.2",
+    "postcss": "^8.2.8",
     "postcss-import": "^14.0.0",
+    "quill": "^1.3.7",
     "rimraf": "^3.0.2",
     "rollup": "^2.38.5",
-    "rollup-plugin-vue": "6.0.0-beta.6"
-  },
-  "dependencies": {
-    "@rollup/plugin-commonjs": "^21.0.3",
-    "postcss": "^8.2.8",
-    "quill": "^1.3.7",
     "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-vue": "6.0.0-beta.6",
     "vue": "^3.2.24"
   }
 }
