--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "vue-quill-text-editor",
-  "version": "1.0.5-beta",
+  "version": "1.0.5-rc",
   "description": "Quill rich text editor component encapsulated with Vue3",
   "author": "uct8086",
   "license": "ISC",
   "main": "dist/vue-quill-editor.umd.js",
-  "module": "dist/vue-quill-editor.esm.js",
   "scripts": {
     "build": "npm run clean && npm run build:esm && npm run build:umd",
     "dev": "npm run clean && npm run dev:umd",
     "build:esm": "rollup  --config build/rollup.esm.config.js",
     "build:umd": "rollup --config build/rollup.umd.config.js",
     "clean": "rimraf ./dist"
+  },
+  "files": ["dist"],
+  "publishConfig": {
+    "access": "public"
   },
   "repository": {
     "type": "git",
