--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "vue-quill-text-editor",
-  "version": "1.0.5-rc",
+  "version": "1.0.5",
   "description": "Quill rich text editor component encapsulated with Vue3",
   "author": "uct8086",
   "license": "ISC",
-  "main": "dist/vue-quill-editor.umd.js",
+  "main": "dist/vue-quill-text-editor.esm.js",
   "scripts": {
     "build": "npm run clean && npm run build:esm && npm run build:umd",
     "dev": "npm run clean && npm run dev:umd",
