--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "build:umd": "rollup --config build/rollup.umd.config.js",
     "clean": "rimraf ./dist"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "publishConfig": {
     "access": "public"
   },
@@ -35,11 +37,12 @@
     "less": "^4.1.2",
     "postcss": "^8.2.8",
     "postcss-import": "^14.0.0",
-    "quill": "^1.3.7",
+    "quill": "1.3.6",
     "rimraf": "^3.0.2",
     "rollup": "^2.38.5",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-vue": "6.0.0-beta.6",
-    "vue": "^3.2.24"
+    "vue": "^3.2.24",
+    "webpack": "^5.72.0"
   }
 }
