feat: update readme

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "clean": "rimraf ./dist"
   },
   "files": [
-    "dist"
+    "dist",
+    "example"
   ],
   "publishConfig": {
     "access": "public"
