--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-quill-text-editor",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "Quill rich text editor component encapsulated with Vue3",
   "author": "uct8086",
   "license": "ISC",
@@ -39,6 +39,7 @@
     "postcss": "^8.2.8",
     "postcss-import": "^14.0.0",
     "quill": "1.3.6",
+    "quill-image-uploader": "^1.2.2",
     "rimraf": "^3.0.2",
     "rollup": "^2.38.5",
     "rollup-plugin-postcss": "^4.0.0",
