--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "less": "^4.1.2",
     "postcss": "^8.2.8",
     "postcss-import": "^14.0.0",
-    "quill": "1.3.6",
+    "quill": "^1.3.7",
     "rimraf": "^3.0.2",
     "rollup": "^2.38.5",
     "rollup-plugin-postcss": "^4.0.0",
